# Relay

./: .dockerignore  .env.example  .gitignore  .prettierrc  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.github/workflows/: publish.yml
prisma/: schema.prisma
src/: config.rs  lib.rs  main.rs  main.ts  relay.rs  tls.rs
src/db/: mod.rs  models.rs
src/drivers/: Database.ts  Prisma.ts
src/lib/: Logs.ts  logs.rs
src/repositories/: AliasRepository.ts  BaseRepository.ts  UserRepository.ts  alias.rs  mod.rs  user.rs
src/services/: BaseService.ts  EncryptionService.ts  MailingService.ts  address.rs  dkim.rs  encryption.rs  mailing.rs  mime.rs  mod.rs
src/types/: database.d.ts
